<resources>
    <string name="app_name">Rally CoDriver Calculator</string>
    <string name="actual_start">Actual Start</string>
    <string name="horas">H</string>
    <string name="minutes">M</string>
    <string name="transit">Transit</string>
    <string name="atc">ATC</string>
    <string name="hora_cero">00:00:00</string>
    <string name="start">Start</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="atc_not_defined">ATC not defined</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="rally_time_offset">Time Offset</string>
    <string name="corrected_rally_time">Corrected Rally Time</string>
    <string name="seconds">S</string>
    <string name="apply">Apply</string>
    <string name="about">About</string>
    <string name="accept">Accept</string>
    <string name="menkaurasoft">©2025 MenkauraSoft bertoalarcon@gmail.com</string>
    <string name="rally_codriver_calculator">Rally CoDriver Calculator</string>
    <string name="rally_time">Rally Time</string>
    <string name="time_card">Time Card</string>
    <string name="stop">Stop</string>
    <string name="offset_applied">Offset applied!</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_text">⚠️ Legal Disclaimer

IMPORTANT: This application is intended solely for use by the co-driver of the vehicle during rally or orientation events, and must never be used by the driver while the vehicle is in motion.

MenkauraSoft accepts no responsibility for any accident, incident, damage, injury, or loss resulting directly or indirectly from the use of this application.

Furthermore, MenkauraSoft does not guarantee the complete accuracy of the calculations provided by the app. It is the user’s responsibility to verify all data before using it in any situation.

By using this application, you acknowledge and agree to assume full responsibility for its use and consequences, and release MenkauraSoft from any legal claims or liabilities arising from it.</string>

    <string-array name="languages">
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
    </string-array>

    <string-array name="offset">
        <item>+</item>
        <item>-</item>
    </string-array>
</resources>