<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center"
    android:padding="10dp">

    <!-- PRIMERA FILA -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <!-- Logo -->
        <ImageView
            android:layout_width="109dp"
            android:layout_height="84dp"
            android:src="@drawable/logo"
            android:layout_gravity="left"/>

        <!-- Rally Time -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="right">

            <!--Rally time Label-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Rally Time"
                android:gravity="center"
                android:textSize="20sp"/>

            <!-- Rally Time watch -->
            <TextView
                android:id="@+id/rallyTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hora_cero"
                android:textSize="50sp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:fontFamily="@font/seven_segment"/>


        </LinearLayout>
    </LinearLayout>

    <!-- SEGUNDA FILA -->
    <!-- Etiqueta time card-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Time Card"
        android:gravity="center"
        android:textSize="40sp"/>

    <!-- TERCERA FILA -->
    <!-- Parte superior carnet de ruta-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginBottom="20dp">

        <!-- Primera columna actual start -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:text="@string/actual_start" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextHoras"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="2"
                    android:hint="@string/horas"
                    android:background="@drawable/edittext_borde" />

                <EditText
                    android:id="@+id/editTextMinutos"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="2"
                    android:hint="@string/minutes"
                    android:background="@drawable/edittext_borde" />

            </LinearLayout>
        </LinearLayout>

        <!-- Segunda columna transit -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:text="@string/transit" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextHorasTransit"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="2"
                    android:hint="@string/horas"
                    android:background="@drawable/edittext_borde" />

                <EditText
                    android:id="@+id/editTextMinutosTransit"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="2"
                    android:hint="@string/minutes"
                    android:background="@drawable/edittext_borde"/>

            </LinearLayout>
        </LinearLayout>

        <!-- Tercera columna ATC -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:text="@string/atc" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextHorasATC"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="2"
                    android:hint="@string/horas"
                    android:background="@drawable/edittext_borde" />

                <EditText
                    android:id="@+id/editTextMinutosATC"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="2"
                    android:hint="@string/minutes"
                    android:background="@drawable/edittext_borde"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <!-- CUARTA FILA -->
    <!-- Etiqueta tiempo restante -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_remaining"
        android:gravity="center"
        android:textSize="40sp"/>

    <!-- Countdown -->
    <TextView
        android:id="@+id/cuentaAtras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hora_cero"
        android:background="@color/black"
        android:textSize="80sp"
        android:textColor="@color/red"
        android:fontFamily="@font/seven_segment"
        android:gravity="center"/>

    <!-- Botones Iniciar y Parar -->
    <Button
        android:id="@+id/botonInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:background="@color/green"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
</LinearLayout>